--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,9 +1,12 @@
-
+version: "3"
 services:
   api:
     build: .
     ports: 
-      - "8000:8000"
+      - 8000:8000
+    volumes:
+      - .:/usr/src/app
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     environment:
       DATABASE_HOSTNAME: db
       DATABASE_PORT: 5432
@@ -23,8 +26,13 @@ services:
       POSTGRES_PASSWORD: Depine123
       POSTGRES_DB: fastapi
     ports:
-      - "5433:5432"
+      - 5433:5432
 
+    volumes:
+        - postgres-db:/var/lib/postgresql/data
+
+volumes:
+    postgres-db:
 
 
 
