--- a/requirements.txt
+++ b/requirements.txt
@@ -15,13 +15,16 @@ httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+iniconfig==2.0.0
 Jinja2==3.1.4
 Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.3
+packaging==24.1
 passlib==1.7.4
+pluggy==1.5.0
 psycopg==3.1.19
 psycopg2==2.9.9
 pydantic==2.7.3
@@ -29,6 +32,7 @@ pydantic-settings==2.3.3
 pydantic_core==2.18.4
 Pygments==2.18.0
 PyJWT==2.8.0
+pytest==8.3.3
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
@@ -37,6 +41,7 @@ shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 starlette==0.37.2
+tomli==2.0.2
 typer==0.12.3
 typing_extensions==4.12.1
 ujson==5.10.0
