copilot-added pytest

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -50,6 +50,7 @@ jobs:
 
       - name: Run tests
         run: |
+          python -m pip install --upgrade pip
           pytest
         env:
           DATABASE_HOSTNAME: localhost
