--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Run tests
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install pytest
           pytest
         env:
           DATABASE_HOSTNAME: localhost
