--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -51,6 +51,7 @@ jobs:
       - name: Run tests
         run: |
           python -m pip install pytest
+          python -m pip install -r requirements.txt
           pytest
         env:
           DATABASE_HOSTNAME: localhost
