--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -47,6 +47,13 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: Install dependencies
         run: pip install -r requirements.txt
+      - name: Print environment variables
+        run: |
+          echo "DATABASE_HOSTNAME: $DATABASE_HOSTNAME"
+          echo "DATABASE_PORT: $DATABASE_PORT"
+          echo "DATABASE_NAME: $DATABASE_NAME"
+          echo "DATABASE_USERNAME: $DATABASE_USERNAME"
+          # Do not print sensitive information like DATABASE_PASSWORD, SECRET_KEY, etc.
       - name: Run tests
         run: |
           pip install pytest
