--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,16 +8,25 @@ jobs:
   job1:
     environment: 
       name: Testing
-    env:
-      DATABASE_HOSTNAME: ${{ secrets.DATABASE_HOSTNAME }}
-      DATABASE_PORT: ${{ secrets.DATABASE_PORT }}
-      DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-      DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
-      DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
-      SECRET_KEY: ${{ secrets.SECRET_KEY }}
-      ALGORITHM: ${{ secrets.ALGORITHM }}
-      ACCESS_TOKEN_EXPIRE_MINUTES: ${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}
+    # env:
+    #   DATABASE_HOSTNAME: ${{ secrets.DATABASE_HOSTNAME }}
+    #   DATABASE_PORT: ${{ secrets.DATABASE_PORT }}
+    #   DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+    #   DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
+    #   DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
+    #   SECRET_KEY: ${{ secrets.SECRET_KEY }}
+    #   ALGORITHM: ${{ secrets.ALGORITHM }}
+    #   ACCESS_TOKEN_EXPIRE_MINUTES: ${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}
     
+    env:
+      DATABASE_HOSTNAME: localhost
+      DATABASE_PORT: 5432
+      DATABASE_PASSWORD: Depine123
+      DATABASE_USERNAME: postgres
+      DATABASE_NAME: fastapi
+      SECRET_KEY: 7e14c84ba93ef43d2977e2dc9d5a53657ef3bb583c5b25382c62f7b6940f1ec5
+      ALGORITHM: HS256
+      ACCESS_TOKEN_EXPIRE_MINUTES: 60
     services:
       postgres:
         image: postgres:latest
