--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,7 +11,11 @@ jobs:
         - name: Set up Python 3.8
           uses: actions/setup-python@v2
           with:
-            python-version: 3.8
+            python-version: 3.9
         - name: say hi to mike
           run: echo "Hello Mike"
+        - name: upgrade pip
+          run: python -m pip install --upgrade pip
+        - name: Install dependencies
+          run: pip install -r requirements.txt
              
