--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,6 +4,15 @@ on: [push, pull_request]
 
 jobs:
     job1:
+      env:
+        DDATABASE_HOSTNAME: localhost
+        DATABASE_PORT: 5432
+        DATABASE_PASSWORD: Depine123
+        DATABASE_USERNAME: postgres
+        DATABASE_NAME: Ascentris
+        SECRET_KEY: 7e14c84ba93ef43d2977e2dc9d5a53657ef3bb583c5b25382c62f7b6940f1ec5
+        ALGORITHM: HS256
+        ACCESS_TOKEN_EXPIRE_MINUTES: 60
       runs-on: ubuntu-latest
       steps:
         - name: Checkout code
@@ -18,4 +27,8 @@ jobs:
           run: python -m pip install --upgrade pip
         - name: Install dependencies
           run: pip install -r requirements.txt
+        - name: test with pytest
+          run: |
+            pip install pytest
+            pytest -v
              
