--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,15 +4,17 @@ on: [push, pull_request]
 
 jobs:
     job1:
+      emvironment:
+        name: testing
       env:
-        DDATABASE_HOSTNAME: localhost
-        DATABASE_PORT: 5432
-        DATABASE_PASSWORD: Depine123
-        DATABASE_USERNAME: postgres
-        DATABASE_NAME: Ascentris
-        SECRET_KEY: 7e14c84ba93ef43d2977e2dc9d5a53657ef3bb583c5b25382c62f7b6940f1ec5
-        ALGORITHM: HS256
-        ACCESS_TOKEN_EXPIRE_MINUTES: 60
+        DATABASE_HOSTNAME: ${{ secrets.DATABASE_HOSTNAME }}
+        DATABASE_PORT: ${{ secrets.DATABASE_PORT }}
+        DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+        DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
+        DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        ALGORITHM: ${{ secrets.ALGORITHM }}
+        ACCESS_TOKEN_EXPIRE_MINUTES: ${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}
       runs-on: ubuntu-latest
       steps:
         - name: Checkout code
