--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -19,6 +19,7 @@ jobs:
         postgres:
           image: postgres:latest
           env:
+            POSTGRES_USER: ${{ secrets.DATABASE_USERNAME }}
             POSTGRES_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
             POSTGRES_DB: ${{ secrets.DATABASE_NAME }}_test
           ports:
@@ -28,7 +29,7 @@ jobs:
             --health-interval 10s
             --health-timeout 5s
             --health-retries 5
-            
+
       runs-on: ubuntu-latest
       steps:
         - name: Checkout code
