--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -9,8 +9,7 @@ jobs:
       env:
         DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
         DATABASE_PORT: ${{secrets.DATABASE_PORT}}
-        # DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-        DATABASE_PASSWORD: Depine123
+        DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
         DATABASE_USERNAME: ${{secrets.DATABASE_USERNAME}}
         DATABASE_NAME: ${{secrets.DATABASE_NAME}}
         SECRET_KEY: ${{secrets.SECRET_KEY}}
@@ -21,7 +20,7 @@ jobs:
           image: postgres:latest
           env:
             POSTGRES_USER: ${{secrets.DATABASE_USERNAME}}
-            POSTGRES_PASSWORD: Depine123
+            POSTGRES_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
             POSTGRES_DB: ${{secrets.DATABASE_NAME}}_test
           ports:
             - 5432:5432
@@ -49,4 +48,29 @@ jobs:
           run: |
             pip install pytest
             pytest -v
-             
+        - name: Login to Docker Hub
+          uses: docker/login-action@v1
+          with:
+            username: ${{ secrets.DOCKER_HUB_USERNAME }}
+            password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+        - name: Set up Docker Buildx
+          id: buildx
+          uses: docker/setup-buildx-action@v1
+
+        - name: Build and push
+          id: docker_build
+          uses: docker/build-push-action@v2
+          with:
+            context: ./
+            file: ./Dockerfile
+            builder: ${{ steps.buildx.outputs.name }}
+            push: true
+            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi:latest
+            cache-from: type=local,src=/tmp/.buildx-cache
+            cache-to: type=local,dest=/tmp/.buildx-cache
+        - name: Image digest
+          run: echo ${{ steps.docker_build.outputs.digest }}
+
+          
+      
