--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -9,7 +9,7 @@ jobs:
       env:
         DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
         DATABASE_PORT: ${{secrets.DATABASE_PORT}}
-        DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
+        DATABASE_PASSWORD: Depine123
         DATABASE_USERNAME: ${{secrets.DATABASE_USERNAME}}
         DATABASE_NAME: ${{secrets.DATABASE_NAME}}
         SECRET_KEY: ${{secrets.SECRET_KEY}}
@@ -20,7 +20,7 @@ jobs:
           image: postgres:latest
           env:
             POSTGRES_USER: ${{secrets.DATABASE_USERNAME}}
-            POSTGRES_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
+            POSTGRES_PASSWORD: Depine123
             POSTGRES_DB: ${{secrets.DATABASE_NAME}}_test
           ports:
             - 5432:5432
